# reidThermalTLD

./: .gitignore  README.md  sync.sh
MultiObjectTLD/: CMakeCache.txt  CMakeLists.txt  Makefile  batchExample  betaInput.webm  camExample  camExample.cpp  runtime.txt
MultiObjectTLD/motld/: MultiObjectTLD.h
src/: CMakeLists.txt  cExample.cpp  closedWorld.py  dataExtraction.cpp  eval_predictions.csv  evaluate.py  evaluate.sh  finalNet.py  gridHyperas.sh  gridSearchHyperas.py  hog.py  jobscript  main.cpp  mnistSiameseNetwork.py  networkExperimentation.py  newGrid.py  nnUtils.py  openTensorBoardNCC.sh  opencvTLD.cpp  people.txt  person.cpp  person.hpp  person.py  prediction.txt  resnet_fused.py  siameseNetwork.py  test.py  tracker.cpp  tracker.hpp  transfer.py  transfer.sh
src/MultiObjectTLD/: CMakeLists.txt  Makefile  camExample  camExample.cpp  runtime.txt
src/MultiObjectTLD/motld/: FernFilter.cpp  FernFilter.h  FernFilter.hpp  Histogram.cpp  Histogram.h  Histogram.hpp  LKTracker.cpp  LKTracker.h  LKTracker.hpp  Matrix.cpp  Matrix.h  Matrix.hpp  (+6 more)
src/classifiers/: people_thermal_23_07_casALL16x32_stump_sym_24_n4.xml  peopleir_lap.svm
src/oldCode/: closedGrid.py  closedWorld.py  closedWorld.sh  conversionJobscript.sh  gridClosed.sh  hog.py  openTensorBoard.sh
src/results/: bestParams1.txt  bestParams2.txt  eval.txt  eval_predictions.csv  formatForGraph.py  fullVectors.csv  gridSearch.txt  gridSearch1.txt  gridSearch2.txt  labels.txt  negative.csv  negativeEval.csv  negativeOther.csv  negativeTest.csv  negativeTrain.csv  negativeVal.csv  negative_aug1.csv  negative_aug2.csv  negative_transfer.csv  normal_net.txt  other_data_predictions.csv  positive.csv  positiveEval.csv  positiveOther.csv  positiveTest.csv  positiveTrain.csv  positiveVal.csv  positive_aug1.csv  positive_aug2.csv  positive_transfer.csv  predictions.csv  te_predictions.csv  te_predictions_aug1.csv  te_predictions_aug2.csv  te_predictions_new.csv  te_predictions_old.csv  te_predictions_ordered.csv  te_predictions_shuffle.csv  te_predictions_transfer.csv  te_predictions_transfer2.csv  (+14 more)
src/saved_models/: conversionJobscript.sh  keras_to_tensorflow.py  model.pbtxt  textGraph.py
(+11 files in other folders)
