cmake_minimum_required(VERSION 2.8)
project(camExample)
set(CMAKE_BUILD_TYPE Release)
set(OpenCV_DIR /home/tom/Documents/motld/MultiObjectTLD)
find_package(OpenCV REQUIRED)
add_compile_options(-std=c++11 -g)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(before ${project_source_dir}/*.hpp)
add_executable(camExample camExample.cpp)
target_link_libraries(camExample ${OpenCV_LIBS})
target_link_libraries(camExample -pthread -lX11)