cmake_minimum_required(VERSION 2.8)
project(reidThermalTLD)
set(CMAKE_BUILD_TYPE Release)
set(OpenCV_DIR /home/tom/Documents/fourthYearWork/reidThermalTLD/src)
find_package(OpenCV REQUIRED)
add_compile_options(-std=c++11 -g)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(before ${project_source_dir}/)
include_directories(MultiObjectTLD/motld/)
add_executable(main main.cpp tracker.cpp MultiObjectTLD/motld/FernFilter.cpp MultiObjectTLD/motld/Histogram.cpp MultiObjectTLD/motld/LKTracker.cpp MultiObjectTLD/motld/Matrix.cpp MultiObjectTLD/motld/MultiObjectTLD.cpp MultiObjectTLD/motld/NNClassifier.cpp)

target_link_libraries(main ${OpenCV_LIBS})
target_link_libraries(main -pthread -lX11)
add_executable(dataExtraction dataExtraction.cpp tracker.cpp MultiObjectTLD/motld/FernFilter.cpp MultiObjectTLD/motld/Histogram.cpp MultiObjectTLD/motld/LKTracker.cpp MultiObjectTLD/motld/Matrix.cpp MultiObjectTLD/motld/MultiObjectTLD.cpp MultiObjectTLD/motld/NNClassifier.cpp)
target_link_libraries(dataExtraction ${OpenCV_LIBS})
target_link_libraries(dataExtraction -pthread -lX11)